<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity names -->
    <string name="app_name">Mute Clock</string>
    <string name="settings">Settings</string>
    <string name="add_rule">Add rule</string>
    <string name="title_activity_add_rule">Add Rule</string>
    <string name="apply">Apply</string>
    <string name="hrs">hrs</string>
    <string name="minuntes">minutes</string>
    <string name="sec">sec</string>
    <string name="zero">0</string>
    <string name="fifteen">15</string>
    <string name="unmute_after">Unmute after</string>
    <string name="hide">↑ Hide ↑</string>
    <string name="show">↓ Show ↓</string>
    <string name="delete_this_rule">Delete this rule?</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="like">Like</string>
    <string name="preference_file_key">com.example.mutelock.PREFERENCE_FILE_KEY</string>
    <string name="wrong_interval">Error: wrong interval. Choose another one.</string>
    <string name="wrong_date">Wrong date</string>
    <string name="mute_at">Mute at</string>
    <string name="set_mute">Ringer set to mute</string>
    <string name="set_unmute">Ringer set to unmute</string>
    <string name="vibrate">Vibrate</string>
    <string name="set_vibrate">Ringer set to vibrate</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="everyday">Everyday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="when_unmute">When unmute?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="repeat">Repeat</string>

    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">Mute clock</string>

</resources>